--- a/index-ar.html
+++ b/index-ar.html
@@ -30,12 +30,73 @@
                 <div class="nav-icon flex-center">
                     <i class="fa-solid fa-navicon"></i>
                 </div>
-                <ul class="flex-center main-transition">
+                <ul class="mainUl flex-center main-transition">
                     <li><a href="#">الرئيسة</a></li>
                     <li><a href="#projects">المشاريع</a></li>
                     <li><a href="#services">الخدمات</a></li>
                     <li><a href="#about">حول</a></li>
-                </ul>
+                    <li><a class="mega-menu-parent" href="#"><i class="fa-solid fa-ellipsis fs-18"></i></a>
+                        <div class="mega-menu p-abs">
+                            <!-- <h2 class="full-w txt-center text-capa">more links</h2> -->
+                            <img src="./IMGS/mega-menu-img.png" alt="mega-menu-img">
+                            <ul class="mega-menu-links">
+                                <div class="links-column">
+                                    <li><a href="#favourites">
+                                            <i class="fa-solid fa-star fs-18 ml-10"></i>
+                                            المفضلات
+                                        </a>
+                                    </li>
+                                    <li><a href="#favourites">
+                                            <i class="fa-solid fa-circle-check fs-18 ml-10"></i>
+                                            مهاراتي
+                                        </a>
+                                    </li>
+                                    <li><a href="#favourites">
+                                            <i class="fa-solid fa-star fs-18 ml-10"></i>
+                                            المفضلات
+                                        </a>
+                                    </li>
+                                    <li><a href="#favourites">
+                                            <i class="fa-solid fa-star fs-18 ml-10"></i>
+                                            المفضلات
+                                        </a>
+                                    </li>
+                                    <li><a href="#favourites">
+                                            <i class="fa-solid fa-star fs-18 ml-10"></i>
+                                            المفضلات
+                                        </a>
+                                    </li>
+                                </div>
+                                <div class="links-column">
+                                    <li><a href="#favourites">
+                                        <i class="fa-solid fa-star fs-18 ml-10"></i>
+                                        المفضلات
+                                    </a>
+                                </li>
+                                <li><a href="#favourites">
+                                        <i class="fa-solid fa-star fs-18 ml-10"></i>
+                                        المفضلات
+                                    </a>
+                                </li>
+                                <li><a href="#favourites">
+                                        <i class="fa-solid fa-star fs-18 ml-10"></i>
+                                        المفضلات
+                                    </a>
+                                </li>
+                                <li><a href="#favourites">
+                                        <i class="fa-solid fa-star fs-18 ml-10"></i>
+                                        المفضلات
+                                    </a>
+                                </li>
+                                <li><a href="#favourites">
+                                        <i class="fa-solid fa-star fs-18 ml-10"></i>
+                                        المفضلات
+                                    </a>
+                                </li>
+                                </div>
+                            </ul>
+                        </div>
+                    </li>                </ul>
             </nav>
             <div class="header-btns p-abs d-flex">
                 <a  class="search-bar flex-center fs-10 br-circle" href="#search-bar" title="اذهب الى محرك البحث">
@@ -142,7 +203,7 @@
                  <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html" title="اضغط هنا لمشاهدة المزيد من المشاريع">شاهد المزيد</a>
             </div>
         </section>
-        <section class="hobbies p-20">
+        <section class="hobbies p-20" id="favourites">
             <div class="container">
              <h1 class="sec-title">المفضلات</h1>
              <div class="hobbies-holder">
