--- a/index-ar.html
+++ b/index-ar.html
@@ -51,9 +51,9 @@
                                             مهاراتي
                                         </a>
                                     </li>
-                                    <li><a href="#favourites">
-                                            <i class="fa-solid fa-star fs-18 ml-10"></i>
-                                            المفضلات
+                                    <li><a href="#video">
+                                            <i class="fa-solid fa-video fs-18 ml-10"></i>
+                                            فيديو
                                         </a>
                                     </li>
                                     <li><a href="#favourites">
@@ -305,6 +305,16 @@
                         <span class="flex-center">50%</span>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="video p-rel" id="video">
+            <video autoplay muted loop>
+                <source  src="./VIDS/awesome-video.mp4" type="video/mp4">
+            </video>
+            <div class="content p-abs">
+                <p>أصنع مواقع الويب</p>
+                <span class="fs-25 d-block mb-10">مع</span>
+                <span class="fs-30">الحب</span>
             </div>
         </section>
     </main>
