--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                                             my skills
                                         </a>
                                     </li>
-                                    <li><a href="#favourites">
-                                            <i class="fa-solid fa-star fs-18 mr-10"></i>
-                                            favourites
+                                    <li><a href="#video">
+                                            <i class="fa-solid fa-video fs-18 mr-10"></i>
+                                            video
                                         </a>
                                     </li>
                                     <li><a href="#favourites">
@@ -323,6 +323,16 @@
                         <span class="flex-center">50%</span>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="video p-rel" id="video">
+            <video autoplay muted loop x2>
+                <source  src="./VIDS/awesome-video.mp4" type="video/mp4">
+            </video>
+            <div class="content p-abs">
+                <p>i make websites </p>
+                <span class="fs-25 d-block mb-10">with</span>
+                <span class="fs-30">love</span>
             </div>
         </section>
     </main>
