--- a/index-ar.html
+++ b/index-ar.html
@@ -24,7 +24,7 @@
 
 <body class="both ar">
     <header class="p-abs">
-        <div class="container flex-center p-rel">
+        <div class="container flex-center p-rel" id="goup">
             <a class="logo" href="./index-ar.html">ot</a>
             <nav class="flex-center">
                 <div class="nav-icon flex-center">
@@ -307,16 +307,23 @@
                 </div>
             </div>
         </section>
-        <section class="video p-rel" id="video">
+        <section class="video p-rel mt-20 mb-20" id="video">
             <video autoplay muted loop>
                 <source  src="./VIDS/awesome-video.mp4" type="video/mp4">
             </video>
             <div class="content p-abs">
                 <p>أصنع مواقع الويب</p>
-                <span class="fs-25 d-block mb-10">مع</span>
-                <span class="fs-30">الحب</span>
+                <span class="fs-25 d-block mb-10 mt-10">مع</span>
+                <span class="fs-30">
+                    <i class="fa-solid fa-heart"></i>
+                    الحب
+                </span>
             </div>
         </section>
+        <a href="#goup" class="goUp">
+            <i class="fa-solid fa-angle-up ml-10"></i>
+            <span>اذهب للأعلى</span>
+        </a>
     </main>
 </body>
 
