--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body class="both eng">
     <header class="p-abs">
-        <div class="container flex-center p-rel">
+        <div class="container flex-center p-rel" id="goup">
             <a class="logo" href="./index.html">ot</a>
             <nav class="flex-center">
                 <div class="nav-icon flex-center">
@@ -144,6 +144,7 @@
         <a href="#projects" class="menu-angles" title="Down">
             <i class="fa-solid fa-angles-down p-abs"></i>
         </a>
+        
     </div>
     <main class="p-rel bg-white">
         <section class="projects p-20" id="projects">
@@ -325,16 +326,22 @@
                 </div>
             </div>
         </section>
-        <section class="video p-rel" id="video">
+        <section class="video p-rel mt-20 mb-20" id="video">
             <video autoplay muted loop x2>
                 <source  src="./VIDS/awesome-video.mp4" type="video/mp4">
             </video>
             <div class="content p-abs">
                 <p>i make websites </p>
-                <span class="fs-25 d-block mb-10">with</span>
-                <span class="fs-30">love</span>
+                <span class="fs-25 d-block mb-10 mt-10">with</span>
+                <span class="fs-30">
+                    l<i class="fa-solid fa-heart"></i>
+                    ve</span>
             </div>
         </section>
+        <a href="#goup" class="goUp">
+            <i class="fa-solid fa-angle-up mr-10"></i>
+            <span>go to top</span>
+        </a>
     </main>
 </body>
 
