--- a/index-ar.html
+++ b/index-ar.html
@@ -252,7 +252,7 @@
             <div class="cards programming" id="programming">
                 <div class="card">
                     <i class="fa-solid fa-check  p-abs c-green"></i>
-                    <h2 class="w-fit ml-auto mr-auto"><i class="fa-brands fa-html5 c-orange"></i> <br> HTML </h2>
+                    <h2 class="w-fit ml-auto mr-auto"><i class="fa-brands fa-html5 c-orange"></i> <br> اتش تي ام ال </h2>
                     <div class="circular-bar html-progress flex-center">
                         <span class="flex-center">100%</span>
                     </div>
@@ -260,7 +260,7 @@
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-check  p-abs c-green"></i>
-                    <h2 class="w-fit ml-auto mr-auto"><i class="fa-brands fa-css3 c-blue"></i> <br> CSS </h2>
+                    <h2 class="w-fit ml-auto mr-auto"><i class="fa-brands fa-css3 c-blue"></i> <br> سي اس اس </h2>
                     <div class="circular-bar css-progress flex-center">
                         <span class="flex-center">100%</span>
                     </div>
@@ -268,7 +268,7 @@
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-gear fa-spin p-abs c-blue"></i>
-                    <h2 class="w-fit ml-auto mr-auto"><i class="fa-brands fa-square-js"></i> <br> JavaScript </h2>
+                    <h2 class="w-fit ml-auto mr-auto"><i class="fa-brands fa-square-js"></i> <br> جافاسكريبت </h2>
                     <div class="circular-bar js-progress flex-center">
                         <span class="flex-center">10%</span>
                     </div>
@@ -278,7 +278,7 @@
                     <i class="fa-solid fa-clock p-abs c-red"></i>
                     <h2 class="w-fit ml-auto mr-auto txt-center">
                         <i class="fa-brands fa-python"></i> <br> 
-                        Python </h2>
+                        بايتون </h2>
                     <div class="circular-bar python-progress flex-center">
                         <span class="flex-center">0%</span>
                     </div>
@@ -307,7 +307,7 @@
                 </div>
             </div>
         </section>
-        <section class="video p-rel mt-20 mb-20" id="video">
+        <section class="video p-rel mt-20" id="video">
             <video autoplay muted loop>
                 <source  src="./VIDS/awesome-video.mp4" type="video/mp4">
             </video>
@@ -318,6 +318,55 @@
                     <i class="fa-solid fa-heart"></i>
                     الحب
                 </span>
+            </div>
+        </section>
+        <section class="services p-20 bg-eee" id="services">
+            <h1 class="sec-title">خدماتي</h1>
+            <div class="container">
+                <div class="services-holder mb-20 ">
+                    <div class="service-wedget bg-white">
+                        <div class="m-40">
+                            <i class="fa-solid fa-palette"></i>
+                            <h2>يو اي/ يو اكس</h2>
+                        </div>
+                        <a class="ser-details" href="">Details</a>
+                    </div>
+                    <div class="service-wedget bg-white">
+                        <div class="m-40">
+                            <i class="fa-solid fa-laptop-code"></i>
+                            <h2>تصميم الويب</h2>
+                        </div>
+                        <a class="ser-details" href="">Details</a>
+                    </div>
+                    <div class="service-wedget bg-white">
+                        <div class="m-40">
+                            <i class="fa-solid fa-masks-theater"></i>
+                            <h2>فن</h2>
+                        </div>
+                        <a class="ser-details" href="">Details</a>
+                    </div>
+                    <div class="service-wedget bg-white">
+                        <div class="m-40">
+                            <i class="fa-solid fa-masks-theater"></i>
+                            <h2>فن</h2>
+                        </div>
+                        <a class="ser-details" href="">Details</a>
+                    </div>
+                    <div class="service-wedget bg-white">
+                        <div class="m-40">
+                            <i class="fa-solid fa-masks-theater"></i>
+                            <h2>فن</h2>
+                        </div>
+                        <a class="ser-details" href="">Details</a>
+                    </div>
+                    <div class="service-wedget bg-white">
+                        <div class="m-40">
+                            <i class="fa-solid fa-masks-theater"></i>
+                            <h2>فن</h2>
+                        </div>
+                        <a class="ser-details" href="">Details</a>
+                    </div>
+                </div>
             </div>
         </section>
         <a href="#goup" class="goUp">
