--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 </div>
             </div>
         </section>
-        <section class="video p-rel mt-20 mb-20" id="video">
+        <section class="video p-rel mt-20" id="video">
             <video autoplay muted loop x2>
                 <source  src="./VIDS/awesome-video.mp4" type="video/mp4">
             </video>
@@ -336,6 +336,55 @@
                 <span class="fs-30">
                     l<i class="fa-solid fa-heart"></i>
                     ve</span>
+            </div>
+        </section>
+        <section class="services p-20 bg-eee" id="services">
+            <h1 class="sec-title">services</h1>
+            <div class="container">
+                <div class="services-holder mb-20 ">
+                    <div class="service-wedget bg-white">
+                        <div class="m-40">
+                            <i class="fa-solid fa-palette"></i>
+                            <h2>UI/UX</h2>
+                        </div>
+                        <a class="ser-details" href="">Details</a>
+                    </div>
+                    <div class="service-wedget bg-white">
+                        <div class="m-40">
+                            <i class="fa-solid fa-laptop-code"></i>
+                            <h2>web design</h2>
+                        </div>
+                        <a class="ser-details" href="">Details</a>
+                    </div>
+                    <div class="service-wedget bg-white">
+                        <div class="m-40">
+                            <i class="fa-solid fa-masks-theater"></i>
+                            <h2>art</h2>
+                        </div>
+                        <a class="ser-details" href="">Details</a>
+                    </div>
+                    <div class="service-wedget bg-white">
+                        <div class="m-40">
+                            <i class="fa-solid fa-masks-theater"></i>
+                            <h2>art</h2>
+                        </div>
+                        <a class="ser-details" href="">Details</a>
+                    </div>
+                    <div class="service-wedget bg-white">
+                        <div class="m-40">
+                            <i class="fa-solid fa-masks-theater"></i>
+                            <h2>art</h2>
+                        </div>
+                        <a class="ser-details" href="">Details</a>
+                    </div>
+                    <div class="service-wedget bg-white">
+                        <div class="m-40">
+                            <i class="fa-solid fa-masks-theater"></i>
+                            <h2>art</h2>
+                        </div>
+                        <a class="ser-details" href="">Details</a>
+                    </div>
+                </div>
             </div>
         </section>
         <a href="#goup" class="goUp">
