--- a/index-ar.html
+++ b/index-ar.html
@@ -117,6 +117,7 @@
                     <h1>أسامة الطالب</h1>
                 </div>
                 <div class="domain mb-20 fw-700">
+                    <i class="fa-solid fa-code main-c"></i>
                     مطور صفحات الويب
                 </div>
                 <div class="social-links mb-20">
@@ -200,7 +201,10 @@
                             <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/OT/" target="_blank">معاينة</a>
                         </div>                    </div>
                  </div>
-                 <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html" title="اضغط هنا لمشاهدة المزيد من المشاريع">شاهد المزيد</a>
+                 <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html" title="اضغط هنا لمشاهدة المزيد من المشاريع">
+                شاهد المزيد
+                <i class="fa-solid fa-arrow-left mr-10"></i>
+            </a>
             </div>
         </section>
         <section class="hobbies p-20" id="favourites">
@@ -215,7 +219,7 @@
                         <i class="fa-solid fa-soccer-ball p-abs"></i>
                          <div class="holder">
                              <h2>الرياضة</h2>
-                             <p>ممارست الرياضة عامة تشعرني بشعور عظيم و يساعدني على التخلص من المشاعر السلبية التي تصيب أي شخص من حين الى اخر. و خاصة ممارست كرة القدم فهي الرياضة المفضلة لي حيث أعشق ممارستها و كذلك متابعة مبارياتها. </p>
+                             <p>ممارست الرياضة عامة تشعرني بشعور عظيم و تساعدني على التخلص من المشاعر السلبية التي تصيب أي شخص من حين الى اخر. و خاصة ممارست كرة القدم فهي الرياضة المفضلة لي حيث أعشق ممارستها و كذلك متابعة مبارياتها. </p>
                          </div>
                      </div>
                  </div>
@@ -227,7 +231,7 @@
                         <i class="fa-solid fa-soccer-ball p-abs"></i>
                          <div class="holder">
                              <h2>التصوير</h2>
-                             <p>التصوير يمكنني من التمتع  من ملكوت الخالق من مناظر طبيعية غاية من الجمال و كذا الاحتفاظ بها كصور. أنا لست محترف لكني أقضي وقتا رائعا مع كامرا هاتفي.</p>
+                             <p>التصوير يمكنني من التمتع  في ملكوت الخالق من مناظر طبيعية غاية في الجمال و كذا الاحتفاظ بها كصور. أنا لست محترف لكني أقضي وقتا رائعا مع كامرا هاتفي.</p>
                          </div>
                      </div>
                  </div>
@@ -252,7 +256,10 @@
             <div class="cards programming" id="programming">
                 <div class="card">
                     <i class="fa-solid fa-check  p-abs c-green"></i>
-                    <h2 class="w-fit ml-auto mr-auto"><i class="fa-brands fa-html5 c-orange"></i> <br> اتش تي ام ال </h2>
+                    <h2 class="w-fit ml-auto mr-auto">
+                        <!-- <i class="fa-brands fa-html5 c-orange"></i> -->
+                        <img src="./IMGS/html.png" alt="">
+                        <br> اتش تي ام ال </h2>
                     <div class="circular-bar html-progress flex-center">
                         <span class="flex-center">100%</span>
                     </div>
@@ -260,7 +267,10 @@
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-check  p-abs c-green"></i>
-                    <h2 class="w-fit ml-auto mr-auto"><i class="fa-brands fa-css3 c-blue"></i> <br> سي اس اس </h2>
+                    <h2 class="w-fit ml-auto mr-auto">
+                        <!-- <i class="fa-brands fa-css3 c-blue"></i> -->
+                        <img src="./IMGS/css.png" alt="">
+                        <br> سي اس اس </h2>
                     <div class="circular-bar css-progress flex-center">
                         <span class="flex-center">100%</span>
                     </div>
@@ -268,7 +278,10 @@
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-gear fa-spin p-abs c-blue"></i>
-                    <h2 class="w-fit ml-auto mr-auto"><i class="fa-brands fa-square-js"></i> <br> جافاسكريبت </h2>
+                    <h2 class="w-fit ml-auto mr-auto">
+                        <!-- <i class="fa-brands fa-square-js"></i> -->
+                        <img src="./IMGS/javascript.png" alt="">
+                        <br> جافاسكريبت </h2>
                     <div class="circular-bar js-progress flex-center">
                         <span class="flex-center">10%</span>
                     </div>
@@ -277,8 +290,9 @@
                 <div class="card">
                     <i class="fa-solid fa-clock p-abs c-red"></i>
                     <h2 class="w-fit ml-auto mr-auto txt-center">
-                        <i class="fa-brands fa-python"></i> <br> 
-                        بايتون </h2>
+                        <!-- <i class="fa-brands fa-python"></i>  -->
+                        <img src="./IMGS/python.png" alt="">
+                        <br> بايتون </h2>
                     <div class="circular-bar python-progress flex-center">
                         <span class="flex-center">0%</span>
                     </div>
@@ -290,8 +304,9 @@
                 <div class="card">
                     <i class="fa-solid fa-check  p-abs c-green"></i>
                     <h2 class="w-fit ml-auto mr-auto">
-                        <i class="fa-regular fa-futbol"></i> <br> 
-                        لعب كرة القدم </h2>
+                        <!-- <i class="fa-regular fa-futbol"></i> -->
+                        <img src="./IMGS/football.png" alt="">
+                        <br> لعب كرة القدم </h2>
                     <div class="circular-bar football-progress flex-center">
                         <span class="flex-center">100%</span>
                     </div>
@@ -299,8 +314,9 @@
                 <div class="card">
                     <i class="fa-solid fa-clock  p-abs c-red"></i>
                     <h2 class="w-fit ml-auto mr-auto">
-                        <i class="fa-solid fa-camera"></i> <br> 
-                        التصوير </h2>
+                        <!-- <i class="fa-solid fa-camera"></i> -->
+                        <img src="./IMGS/photography.png" alt="">
+                        <br> التصوير </h2>
                     <div class="circular-bar photography-progress flex-center">
                         <span class="flex-center">50%</span>
                     </div>
@@ -329,43 +345,56 @@
                             <i class="fa-solid fa-palette"></i>
                             <h2>يو اي/ يو اكس</h2>
                         </div>
-                        <a class="ser-details" href="">Details</a>
+                        <a class="ser-details" href="">التفاصيل</a>
                     </div>
                     <div class="service-wedget bg-white">
                         <div class="m-40">
                             <i class="fa-solid fa-laptop-code"></i>
                             <h2>تصميم الويب</h2>
                         </div>
-                        <a class="ser-details" href="">Details</a>
+                        <a class="ser-details" href="">التفاصيل</a>
                     </div>
                     <div class="service-wedget bg-white">
                         <div class="m-40">
                             <i class="fa-solid fa-masks-theater"></i>
                             <h2>فن</h2>
                         </div>
-                        <a class="ser-details" href="">Details</a>
+                        <a class="ser-details" href="">التفاصيل</a>
                     </div>
                     <div class="service-wedget bg-white">
                         <div class="m-40">
                             <i class="fa-solid fa-masks-theater"></i>
                             <h2>فن</h2>
                         </div>
-                        <a class="ser-details" href="">Details</a>
+                        <a class="ser-details" href="">التفاصيل</a>
                     </div>
                     <div class="service-wedget bg-white">
                         <div class="m-40">
                             <i class="fa-solid fa-masks-theater"></i>
                             <h2>فن</h2>
                         </div>
-                        <a class="ser-details" href="">Details</a>
+                        <a class="ser-details" href="">التفاصيل</a>
                     </div>
                     <div class="service-wedget bg-white">
                         <div class="m-40">
                             <i class="fa-solid fa-masks-theater"></i>
                             <h2>فن</h2>
                         </div>
-                        <a class="ser-details" href="">Details</a>
+                        <a class="ser-details" href="">التفاصيل</a>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="about pt-20 pt-40" id="about">
+            <h1 class="sec-title">حولي</h1>
+            <div class="about-bg">
+                <div class="content">
+                    <!-- <img src="./IMGS/about-information.png" class="w-10 ml-auto mr-auto d-block"> -->
+                    <p class="mb-10">نصوص عربية مشكولة للأطفال تعد النصوص العربية أحد أكثر اللغات التى انتشرت فى بلاد العالم ، كما تعد اللغة الرسمية فى كافة بلدان الوطن العربي ، وقد يبلغ عدد الأشخاص اللذين يتحدثون حوالى 422 مليون نسمة ، ولذا تعد واحدة من اللغات الرسمية المعتمدة فى منظمة الأمم المتحدة ، ولذا يتم الاحتفال من كل عام باليوم العالمى لذكرى اعتمادها فى منظمة الأمم المتحدة . وإليكم المزيد من التفاصيل . فتابعوا معنا .</p>
+                    <a class="about-btn c-blue" href="./about-page">
+                        اقرأ المزيد
+                        <i class="fa-solid fa-arrow-left mr-10"></i>
+                    </a>
                 </div>
             </div>
         </section>
