--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <h1>oussama et-talib</h1>
                 </div>
                 <div class="domain mb-20 fw-700">
-                    <i class="fa-solid fa-code c-blue"></i>
+                    <i class="fa-solid fa-code main-c"></i>
                     front-end DEV
                 </div>
                 <div class="social-links mb-20">
@@ -219,7 +219,9 @@
                     </div>
                 </div>
                 <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html" title="Click This To See More Projects">see
-                    more</a>
+                more
+                <i class="fa-solid fa-arrow-right ml-10"></i>
+                </a>
             </div>
         </section>
         <section class="hobbies p-20" id="favourites">
@@ -271,7 +273,10 @@
             <div class="cards programming" id="programming">
                 <div class="card">
                     <i class="fa-solid fa-check  p-abs c-green"></i>
-                    <h2 class="w-fit ml-auto mr-auto"><i class="fa-brands fa-html5 c-orange"></i> <br> HTML </h2>
+                    <h2 class="w-fit ml-auto mr-auto">
+                        <!-- <i class="fa-brands fa-html5 c-orange"></i> -->
+                        <img src="./IMGS/html.png" alt="">
+                        <br> HTML </h2>
                     <div class="circular-bar html-progress flex-center">
                         <span class="flex-center">100%</span>
                     </div>
@@ -279,7 +284,10 @@
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-check  p-abs c-green"></i>
-                    <h2 class="w-fit ml-auto mr-auto"><i class="fa-brands fa-css3 c-blue"></i> <br> CSS </h2>
+                    <h2 class="w-fit ml-auto mr-auto">
+                        <!-- <i class="fa-brands fa-css3 c-blue"></i> -->
+                        <img src="./IMGS/css.png" alt="">
+                        <br> CSS </h2>
                     <div class="circular-bar css-progress flex-center">
                         <span class="flex-center">100%</span>
                     </div>
@@ -287,7 +295,10 @@
                 </div>
                 <div class="card">
                     <i class="fa-solid fa-gear fa-spin p-abs c-blue"></i>
-                    <h2 class="w-fit ml-auto mr-auto"><i class="fa-brands fa-square-js"></i> <br> JavaScript </h2>
+                    <h2 class="w-fit ml-auto mr-auto">
+                        <!-- <i class="fa-brands fa-square-js"></i>  -->
+                        <img src="./IMGS/javascript.png" alt="">
+                        <br> JavaScript </h2>
                     <div class="circular-bar js-progress flex-center">
                         <span class="flex-center">10%</span>
                     </div>
@@ -296,8 +307,9 @@
                 <div class="card">
                     <i class="fa-solid fa-clock p-abs c-red"></i>
                     <h2 class="w-fit ml-auto mr-auto txt-center">
-                        <i class="fa-brands fa-python"></i> <br> 
-                        Python </h2>
+                        <!-- <i class="fa-brands fa-python"></i> -->
+                        <img src="./IMGS/python.png" alt="">
+                        <br> Python </h2>
                     <div class="circular-bar python-progress flex-center">
                         <span class="flex-center">0%</span>
                     </div>
@@ -309,7 +321,9 @@
                 <div class="card">
                     <i class="fa-solid fa-check  p-abs c-green"></i>
                     <h2 class="w-fit ml-auto mr-auto">
-                        <i class="fa-regular fa-futbol"></i> <br> 
+                        <!-- <i class="fa-regular fa-futbol"></i> -->
+                        <img src="./IMGS/football.png" alt="">
+                        <br> 
                         Play Football </h2>
                     <div class="circular-bar football-progress flex-center">
                         <span class="flex-center">100%</span>
@@ -318,7 +332,9 @@
                 <div class="card">
                     <i class="fa-solid fa-clock  p-abs c-red"></i>
                     <h2 class="w-fit ml-auto mr-auto">
-                        <i class="fa-solid fa-camera"></i> <br> 
+                        <!-- <i class="fa-solid fa-camera"></i> -->
+                        <img src="./IMGS/photography.png" alt="">
+                        <br> 
                         Photography </h2>
                     <div class="circular-bar photography-progress flex-center">
                         <span class="flex-center">50%</span>
@@ -384,6 +400,19 @@
                         </div>
                         <a class="ser-details" href="">Details</a>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="about pt-20 pt-40" id="about">
+            <h1 class="sec-title">about me</h1>
+            <div class="about-bg">
+                <div class="content">
+                    <!-- <img src="./IMGS/about-information.png" class="w-10 ml-auto mr-auto d-block"> -->
+                    <p class="mb-10">Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus cupiditate rerum assumenda consectetur delectus qui corrupti enim magnam libero ipsum? sit amet consectetur adipisicing elit. Quaerat, non? Tempora ducimus minus non nesciunt corrupti expedita voluptates, quod ea culpa officia enim temporibus ad consequuntur eius reiciendis nostrum architecto.</p>
+                    <a class="about-btn c-blue" href="./about-page">
+                        read more
+                        <i class="fa-solid fa-arrow-right ml-10"></i>
+                    </a>
                 </div>
             </div>
         </section>
