--- a/index-ar.html
+++ b/index-ar.html
@@ -34,10 +34,10 @@
                     <li><a href="#">الرئيسة</a></li>
                     <li><a href="#projects">المشاريع</a></li>
                     <li><a href="#services">الخدمات</a></li>
-                    <li><a href="#about">حول</a></li>
+                    <li><a href="#about">حولي</a></li>
                     <li><a class="mega-menu-parent" href="#"><i class="fa-solid fa-ellipsis fs-18"></i></a>
                         <div class="mega-menu p-abs">
-                            <!-- <h2 class="full-w txt-center text-capa">more links</h2> -->
+                            <!-- <h2 class="full-w txt-center text-capa">روابط أخرى</h2> -->
                             <img src="./IMGS/mega-menu-img.png" alt="mega-menu-img">
                             <ul class="mega-menu-links">
                                 <div class="links-column">
@@ -67,7 +67,7 @@
                                         </a>
                                     </li>
                                 </div>
-                                <div class="links-column">
+                                <!-- <div class="links-column">
                                     <li><a href="#favourites">
                                         <i class="fa-solid fa-star fs-18 ml-10"></i>
                                         المفضلات
@@ -93,7 +93,7 @@
                                         المفضلات
                                     </a>
                                 </li>
-                                </div>
+                                </div> -->
                             </ul>
                         </div>
                     </li>                </ul>
