--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                         </a>
                                     </li>
                                 </div>
-                                <div class="links-column">
+                                <!-- <div class="links-column">
                                     <li><a href="#favourites">
                                         <i class="fa-solid fa-star fs-18 mr-10"></i>
                                         favourites
@@ -95,7 +95,7 @@
                                         favourites
                                     </a>
                                 </li>
-                                </div>
+                                </div> -->
                             </ul>
                         </div>
                     </li>
